<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/trend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="14dp"
            android:src="@drawable/money"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/unknown"
            android:textColor="@color/on_background"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/trend"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/x"
            android:textColor="@color/on_background"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/count"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/zero"
            android:textColor="@color/on_background"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/suffix"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/rub"
            android:textColor="@color/on_background"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingBottom="4dp"
            android:text="@string/unknown"
            android:textColor="@color/on_surface"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>