<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cashflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="15"
            android:text="@string/app_name"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/visibility_off" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/total"
                android:textColor="@color/on_surface"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingVertical="20dp"
                android:text="@string/zero"
                android:textColor="@color/on_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/rub"
                android:textColor="@color/on_background"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/Accounts"
                android:textColor="@color/on_surface"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/add" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="14dp"
        app:dividerColor="@color/on_surface" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accounts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</LinearLayout>
